--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proposta de Marketing Digital | Arca Turismo</title>
+    <title>Proposta de Marketing Digital | RGD Soluções</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -14,59 +14,71 @@
         <div class="container">
             <img src="logo-rgd.png" alt="Logo RGD Soluções Gráficas" class="logo">
             <h1>Proposta de Marketing Digital Profissional</h1>
-            <p class="subtitle">Apresentado por Pedro Gustavo para Arca Turismo</p>
+            <p class="subtitle">Apresentado por RGD SOLUÇÕES</p>
             <a href="#proposta" class="cta-button">Ver Proposta</a>
         </div>
     </header>
+
     <section id="quem-somos" class="section">
         <div class="container">
-            <h2>O Especialista por Trás do Projeto</h2>
-            <div class="bio">
-                <img src="sua-foto.jpeg" alt="Foto de Pedro Gustavo" class="profile-pic">
-                <div>
+            <h2>Time de Soluções</h2>
+            <div class="team-grid">
+                <div class="team-member">
+                    <img src="darci-foto.jpeg" alt="Foto de Darci Rodrigues" class="profile-pic">
+                    <h3>Darci Rodrigues</h3>
+                    <h4>CEO (Chief Executive Officer)</h4>
+                    <p>Expertise de mercado, prospecção de leads e análise estratégica para garantir o crescimento contínuo dos nossos parceiros.</p>
+                </div>
+                <div class="team-member">
+                    <img src="sua-foto.jpeg" alt="Foto de Pedro Gustavo" class="profile-pic">
                     <h3>Pedro Gustavo</h3>
-                    <p>Especialista em AdOps e mídia programática com foco em resultado e performance. Minha missão é transformar a presença de marcas no Instagram em negócios lucrativos e sustentáveis, combinando estratégia de dados com criatividade.</p>
+                    <h4>COO (Chief Operations Officer)</h4>
+                    <p>Especialista em AdOps e mídia programática, transformando dados em performance e campanhas em negócios lucrativos.</p>
+                </div>
+                <div class="team-member">
+                    <img src="paulo-foto.jpeg" alt="Foto de Paulo Ricardo" class="profile-pic">
+                    <h3>Paulo Ricardo</h3>
+                    <h4>CMO (Chief Marketing Officer)</h4>
+                    <p>Mais de 10 anos no mercado gráfico, com experiência em criação de criativos, atendimento e ideias inovadoras para posts.</p>
                 </div>
             </div>
         </div>
     </section>
+
     <section id="desafios" class="section bg-light">
-        <div class="container">
-            <h2>Os Desafios Atuais da Arca Turismo</h2>
-            <div class="grid-4">
-                <div class="card"><h4>Baixo Alcance</h4><p>Dificuldade em alcançar novos seguidores de forma orgânica.</p></div>
-                <div class="card"><h4>Pouco Engajamento</h4><p>Posts com poucas curtidas, comentários e compartilhamentos.</p></div>
-                <div class="card"><h4>Identidade Visual</h4><p>Falta de um padrão visual que conecte e profissionalize a marca.</p></div>
-                <div class="card"><h4>Tráfego Pago</h4><p>Ausência de campanhas de anúncios otimizadas para gerar vendas.</p></div>
-            </div>
-        </div>
+        <div class="container"><h2>Os Desafios Atuais da Arca Turismo</h2><div class="grid-4"><div class="card"><h4>Baixo Alcance</h4><p>Dificuldade em alcançar novos seguidores de forma orgânica.</p></div><div class="card"><h4>Pouco Engajamento</h4><p>Posts com poucas curtidas, comentários e compartilhamentos.</p></div><div class="card"><h4>Identidade Visual</h4><p>Falta de um padrão visual que conecte e profissionalize a marca.</p></div><div class="card"><h4>Tráfego Pago</h4><p>Ausência de campanhas de anúncios otimizadas para gerar vendas.</p></div></div></div>
     </section>
+    
     <section id="proposta" class="section">
         <div class="container">
             <h2>Nosso Plano de Ação Detalhado</h2>
             <p class="section-subtitle">Uma solução completa para posicionar a Arca Turismo como líder no digital.</p>
             <div class="grid-3">
-                <div class="feature-card"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 16.5V9.75m0 0l3 3m-3-3l-3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.33-2.325 5.25 5.25 0 019.777 2.325c0 1.396-.562 2.63-1.48 3.538M6.75 19.5a4.5 4.5 0 006.75-3.175" /></svg></div><h3>Estratégia e Identidade Visual</h3><ul><li><span class="check">✔</span> Análise completa do perfil atual.</li><li><span class="check">✔</span> Criação de um Manual de Marca Visual.</li><li><span class="check">✔</span> Definição de paleta de cores, fontes e logo.</li><li><span class="check">✔</span> Templates para Posts, Stories e Reels.</li><li><span class="check">✔</span> Planejamento e Calendário Editorial.</li></ul></div>
-                <div class="feature-card"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15.59 14.37a6 6 0 01-5.84 7.38v-4.82m5.84-2.56a6 6 0 016.38 8.13l-4.16-2.23m-8.13-14.37a6 6 0 015.84-7.38v4.82m-5.84 2.56a6 6 0 01-6.38-8.13l4.16 2.23" /></svg></div><h3>Conteúdo e Gestão de Tráfego</h3><ul><li><span class="check">✔</span> Criação de 20 posts/mês (design + copy).</li><li><span class="check">✔</span> Roteirização e edição de 4 Reels/mês.</li><li><span class="check">✔</span> Gestão Profissional de Meta Ads.</li><li><span class="check">✔</span> Criação de campanhas de alcance e conversão.</li><li><span class="check">✔</span> Otimização de público, criativos e verba.</li></ul></div>
-                <div class="feature-card"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M2.25 18L9 11.25l4.306 4.307a11.95 11.95 0 015.814-5.519l2.74-1.22m0 0l-3.75-.625m3.75.625l-6.25 3.75" /></svg></div><h3>Análise e Crescimento Contínuo</h3><ul><li><span class="check">✔</span> Relatórios mensais de performance.</li><li><span class="check">✔</span> Análise de dados e insights para melhorias.</li><li><span class="check">✔</span> Otimização de Link na Bio (Linktree/Canva).</li><li><span class="check">✔</span> Configuração de Destaques Estratégicos.</li><li><span class="check">✔</span> Reuniões mensais de alinhamento.</li></ul></div>
+                <div class="feature-card"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 16.5V9.75m0 0l3 3m-3-3l-3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.33-2.325 5.25 5.25 0 019.777 2.325c0 1.396-.562 2.63-1.48 3.538M6.75 19.5a4.5 4.5 0 006.75-3.175" /></svg></div><h3>Estratégia e Identidade Visual</h3><ul><li><span class="check">✔</span> Análise completa do perfil atual.</li><li><span class="check">✔</span> Criação de um Manual de Marca Visual.</li><li><span class="check">✔</span> Definição de paleta de cores, fontes e logo.</li><li><span class="check">✔</span> Templates para Posts, Stories e Reels.</li><li><span class="check">✔</span> Planejamento e Calendário Editorial.</li></ul></div>
+                <div class="feature-card"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15.59 14.37a6 6 0 01-5.84 7.38v-4.82m5.84-2.56a6 6 0 016.38 8.13l-4.16-2.23m-8.13-14.37a6 6 0 015.84-7.38v4.82m-5.84 2.56a6 6 0 01-6.38-8.13l4.16 2.23" /></svg></div><h3>Conteúdo e Gestão de Tráfego</h3><ul>
+                    <li><span class="check">✔</span> Criação de 3 posts semanais (design + copy).</li>
+                    <li><span class="check">✔</span> Roteirização e edição de 4 Reels/mês.</li><li><span class="check">✔</span> Gestão Profissional de Meta Ads.</li><li><span class="check">✔</span> Criação de campanhas de alcance e conversão.</li><li><span class="check">✔</span> Otimização de público, criativos e verba.</li></ul></div>
+                <div class="feature-card"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M2.25 18L9 11.25l4.306 4.307a11.95 11.95 0 015.814-5.519l2.74-1.22m0 0l-3.75-.625m3.75.625l-6.25 3.75" /></svg></div><h3>Análise e Crescimento Contínuo</h3><ul><li><span class="check">✔</span> Relatórios mensais de performance.</li><li><span class="check">✔</span> Análise de dados e insights para melhorias.</li><li><span class="check">✔</span> Otimização de Link na Bio (Linktree/Canva).</li><li><span class="check">✔</span> Configuração de Destaques Estratégicos.</li><li><span class="check">✔</span> Reuniões mensais de alinhamento.</li></ul></div>
             </div>
         </div>
     </section>
+
     <section id="investimento" class="section bg-dark">
         <div class="container text-center">
             <h2>Investimento Estratégico</h2>
             <div class="investment-box">
-                <p class="price">R$ 3.500/mês</p>
+                <p class="price">R$ 4.200/mês <span class="negotiable">(negociável)</span></p>
                 <p class="investment-note">Um investimento planejado para gerar vendas que superam o valor do serviço.</p>
                 <ul><li>✔ Sem contrato de fidelidade</li><li>✔ Pagamento via Pix ou Boleto</li><li>✔ Atendimento consultivo e suporte direto</li></ul>
             </div>
         </div>
     </section>
+
     <footer id="proximos-passos" class="footer">
         <div class="container text-center">
             <h2>Prontos para Decolar?</h2>
             <ol class="steps"><li><span>1</span> Aprovação da Proposta</li><li><span>2</span> Reunião de Alinhamento</li><li><span>3</span> Início das Ações!</li></ol>
-            <a href="https://wa.me/55SEUNUMEROAQUI" target="_blank" class="cta-button final-cta">Aprovar e Agendar Reunião</a>
+            <a href="https://api.whatsapp.com/send?phone=5511943231311&text=RGD%20SOLU%C3%87%C3%95ES%20Muito%20obrigado%20pela%20proposta%21%20Qual%20o%20pr%C3%B3ximo%20passo%3F" target="_blank" class="cta-button final-cta">Aprovar e Agendar Reunião</a>
             <p class="contact-info">Clique no botão para aprovar a proposta e falarmos diretamente pelo WhatsApp.</p>
         </div>
     </footer>
