--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <img src="logo-rgd.png" alt="Logo RGD Soluções Gráficas" class="logo">
             <h1>Proposta de Marketing Digital Profissional</h1>
-            <p class="subtitle">Apresentado por RGD SOLUÇÕES</p>
+            <p class="subtitle">Apresentado por RGD SOLUÇÕES para Arca Turismo</p>
             <a href="#proposta" class="cta-button">Ver Proposta</a>
         </div>
     </header>
@@ -54,33 +54,9 @@
             <h2>Nosso Plano de Ação Detalhado</h2>
             <p class="section-subtitle">Uma solução completa para posicionar a Arca Turismo como líder no digital.</p>
             <div class="grid-3">
-                <div class="feature-card"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 16.5V9.75m0 0l3 3m-3-3l-3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.33-2.325 5.25 5.25 0 019.777 2.325c0 1.396-.562 2.63-1.48 3.538M6.75 19.5a4.5 4.5 0 006.75-3.175" /></svg></div><h3>Estratégia e Identidade Visual</h3><ul><li><span class="check">✔</span> Análise completa do perfil atual.</li><li><span class="check">✔</span> Criação de um Manual de Marca Visual.</li><li><span class="check">✔</span> Definição de paleta de cores, fontes e logo.</li><li><span class="check">✔</span> Templates para Posts, Stories e Reels.</li><li><span class="check">✔</span> Planejamento e Calendário Editorial.</li></ul></div>
-                <div class="feature-card"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15.59 14.37a6 6 0 01-5.84 7.38v-4.82m5.84-2.56a6 6 0 016.38 8.13l-4.16-2.23m-8.13-14.37a6 6 0 015.84-7.38v4.82m-5.84 2.56a6 6 0 01-6.38-8.13l4.16 2.23" /></svg></div><h3>Conteúdo e Gestão de Tráfego</h3><ul>
-                    <li><span class="check">✔</span> Criação de 3 posts semanais (design + copy).</li>
-                    <li><span class="check">✔</span> Roteirização e edição de 4 Reels/mês.</li><li><span class="check">✔</span> Gestão Profissional de Meta Ads.</li><li><span class="check">✔</span> Criação de campanhas de alcance e conversão.</li><li><span class="check">✔</span> Otimização de público, criativos e verba.</li></ul></div>
-                <div class="feature-card"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M2.25 18L9 11.25l4.306 4.307a11.95 11.95 0 015.814-5.519l2.74-1.22m0 0l-3.75-.625m3.75.625l-6.25 3.75" /></svg></div><h3>Análise e Crescimento Contínuo</h3><ul><li><span class="check">✔</span> Relatórios mensais de performance.</li><li><span class="check">✔</span> Análise de dados e insights para melhorias.</li><li><span class="check">✔</span> Otimização de Link na Bio (Linktree/Canva).</li><li><span class="check">✔</span> Configuração de Destaques Estratégicos.</li><li><span class="check">✔</span> Reuniões mensais de alinhamento.</li></ul></div>
-            </div>
-        </div>
-    </section>
-
-    <section id="investimento" class="section bg-dark">
-        <div class="container text-center">
-            <h2>Investimento Estratégico</h2>
-            <div class="investment-box">
-                <p class="price">R$ 4.200/mês <span class="negotiable">(negociável)</span></p>
-                <p class="investment-note">Um investimento planejado para gerar vendas que superam o valor do serviço.</p>
-                <ul><li>✔ Sem contrato de fidelidade</li><li>✔ Pagamento via Pix ou Boleto</li><li>✔ Atendimento consultivo e suporte direto</li></ul>
-            </div>
-        </div>
-    </section>
-
-    <footer id="proximos-passos" class="footer">
-        <div class="container text-center">
-            <h2>Prontos para Decolar?</h2>
-            <ol class="steps"><li><span>1</span> Aprovação da Proposta</li><li><span>2</span> Reunião de Alinhamento</li><li><span>3</span> Início das Ações!</li></ol>
-            <a href="https://api.whatsapp.com/send?phone=5511943231311&text=RGD%20SOLU%C3%87%C3%95ES%20Muito%20obrigado%20pela%20proposta%21%20Qual%20o%20pr%C3%B3ximo%20passo%3F" target="_blank" class="cta-button final-cta">Aprovar e Agendar Reunião</a>
-            <p class="contact-info">Clique no botão para aprovar a proposta e falarmos diretamente pelo WhatsApp.</p>
-        </div>
-    </footer>
-</body>
-</html>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 001.5-.189m-1.5.189a6.01 6.01 0 01-1.5-.189m3.75 7.478a12.06 12.06 0 01-4.5 0m3.75 2.311a15.045 15.045 0 01-7.5 0C4.508 17.627 2.25 14.438 2.25 10.5 2.25 6.563 4.508 3.375 7.5 3.375c1.172 0 2.29.29 3.262.818M15 10.5a8.956 8.956 0 00-5.982-2.275M15 10.5c0 4.418-3.582 8-8 8s-8-3.582-8-8 3.582-8 8-8 8 3.582 8 8z" /></svg>
+                    </div>
+                    <h3>Estratégia e Identidade Visual</h3>
+                    <ul><li><span class
