--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <img src="logo-rgd.png" alt="Logo RGD Soluções Gráficas" class="logo">
             <h1>Proposta de Marketing Digital Profissional</h1>
-            <p class="subtitle">Apresentado por RGD SOLUÇÕES</p>
+            <p class="subtitle">Apresentado por RGD SOLUÇÕES para Arca Turismo</p>
             <a href="#proposta" class="cta-button">Ver Proposta</a>
         </div>
     </header>
