--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
+    <div class="top-header">
+        <img src="logo-rgd.png" alt="Logo RGD Soluções Gráficas" class="header-logo">
+    </div>
+
     <header class="hero">
         <div class="container">
-            <img src="logo-rgd.png" alt="Logo RGD Soluções Gráficas" class="logo">
             <h1>Proposta de Marketing Digital Profissional</h1>
-            <p class="subtitle">Apresentado por RGD SOLUÇÕES para Arca Turismo</p>
+            <p class="subtitle">Apresentado por RGD SOLUÇÕES</p>
             <a href="#proposta" class="cta-button">Ver Proposta</a>
         </div>
     </header>
@@ -46,15 +49,7 @@
     </section>
 
     <section id="desafios" class="section bg-light">
-        <div class="container">
-            <h2>Os Desafios Atuais da Arca Turismo</h2>
-            <div class="grid-4">
-                <div class="card"><h4>Baixo Alcance</h4><p>Dificuldade em alcançar novos seguidores de forma orgânica.</p></div>
-                <div class="card"><h4>Pouco Engajamento</h4><p>Posts com poucas curtidas, comentários e compartilhamentos.</p></div>
-                <div class="card"><h4>Identidade Visual</h4><p>Falta de um padrão visual que conecte e profissionalize a marca.</p></div>
-                <div class="card"><h4>Tráfego Pago</h4><p>Ausência de campanhas de anúncios otimizadas para gerar vendas.</p></div>
-            </div>
-        </div>
+        <div class="container"><h2>Os Desafios Atuais da Arca Turismo</h2><div class="grid-4"><div class="card"><h4>Baixo Alcance</h4><p>Dificuldade em alcançar novos seguidores de forma orgânica.</p></div><div class="card"><h4>Pouco Engajamento</h4><p>Posts com poucas curtidas, comentários e compartilhamentos.</p></div><div class="card"><h4>Identidade Visual</h4><p>Falta de um padrão visual que conecte e profissionalize a marca.</p></div><div class="card"><h4>Tráfego Pago</h4><p>Ausência de campanhas de anúncios otimizadas para gerar vendas.</p></div></div></div>
     </section>
     
     <section id="proposta" class="section">
@@ -62,45 +57,9 @@
             <h2>Nosso Plano de Ação Detalhado</h2>
             <p class="section-subtitle">Uma solução completa para posicionar a Arca Turismo como líder no digital.</p>
             <div class="grid-3">
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 001.5-.189m-1.5.189a6.01 6.01 0 01-1.5-.189m3.75 7.478a12.06 12.06 0 01-4.5 0m3.75 2.311a15.045 15.045 0 01-7.5 0C4.508 17.627 2.25 14.438 2.25 10.5 2.25 6.563 4.508 3.375 7.5 3.375c1.172 0 2.29.29 3.262.818M15 10.5a8.956 8.956 0 00-5.982-2.275M15 10.5c0 4.418-3.582 8-8 8s-8-3.582-8-8 3.582-8 8-8 8 3.582 8 8z" /></svg>
-                    </div>
-                    <h3>Estratégia e Identidade Visual</h3>
-                    <ul>
-                        <li><span class="check">✔</span> Análise completa do perfil atual.</li>
-                        <li><span class="check">✔</span> Criação de um Manual de Marca Visual.</li>
-                        <li><span class="check">✔</span> Definição de paleta de cores, fontes e logo.</li>
-                        <li><span class="check">✔</span> Templates para Posts, Stories e Reels.</li>
-                        <li><span class="check">✔</span> Planejamento e Calendário Editorial.</li>
-                    </ul>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" /></svg>
-                    </div>
-                    <h3>Conteúdo e Gestão de Tráfego</h3>
-                    <ul>
-                        <li><span class="check">✔</span> Criação de 3 posts semanais (design + copy).</li>
-                        <li><span class="check">✔</span> Roteirização e edição de 4 Reels/mês.</li>
-                        <li><span class="check">✔</span> Gestão Profissional de Meta Ads.</li>
-                        <li><span class="check">✔</span> Criação de campanhas de alcance e conversão.</li>
-                        <li><span class="check">✔</span> Otimização de público, criativos e verba.</li>
-                    </ul>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M3.75 3v11.25A2.25 2.25 0 006 16.5h12A2.25 2.25 0 0020.25 14.25V3M3.75 3l-1.48-1.48M3.75 3h16.5M12 16.5h.008v.008H12v-.008z" /></svg>
-                    </div>
-                    <h3>Análise e Crescimento Contínuo</h3>
-                    <ul>
-                        <li><span class="check">✔</span> Relatórios mensais de performance.</li>
-                        <li><span class="check">✔</span> Análise de dados e insights para melhorias.</li>
-                        <li><span class="check">✔</span> Otimização de Link na Bio (Linktree/Canva).</li>
-                        <li><span class="check">✔</span> Configuração de Destaques Estratégicos.</li>
-                        <li><span class="check">✔</span> Reuniões mensais de alinhamento.</li>
-                    </ul>
-                </div>
+                <div class="feature-card"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 001.5-.189m-1.5.189a6.01 6.01 0 01-1.5-.189m3.75 7.478a12.06 12.06 0 01-4.5 0m3.75 2.311a15.045 15.045 0 01-7.5 0C4.508 17.627 2.25 14.438 2.25 10.5 2.25 6.563 4.508 3.375 7.5 3.375c1.172 0 2.29.29 3.262.818M15 10.5a8.956 8.956 0 00-5.982-2.275M15 10.5c0 4.418-3.582 8-8 8s-8-3.582-8-8 3.582-8 8-8 8 3.582 8 8z" /></svg></div><h3>Estratégia e Identidade Visual</h3><ul><li><span class="check">✔</span> Análise completa do perfil atual.</li><li><span class="check">✔</span> Criação de um Manual de Marca Visual.</li><li><span class="check">✔</span> Definição de paleta de cores, fontes e logo.</li><li><span class="check">✔</span> Templates para Posts, Stories e Reels.</li><li><span class="check">✔</span> Planejamento e Calendário Editorial.</li></ul></div>
+                <div class="feature-card"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" /></svg></div><h3>Conteúdo e Gestão de Tráfego</h3><ul><li><span class="check">✔</span> Criação de 3 posts semanais (design + copy).</li><li><span class="check">✔</span> Roteirização e edição de 4 Reels/mês.</li><li><span class="check">✔</span> Gestão Profissional de Meta Ads.</li><li><span class="check">✔</span> Criação de campanhas de alcance e conversão.</li><li><span class="check">✔</span> Otimização de público, criativos e verba.</li></ul></div>
+                <div class="feature-card"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M3.75 3v11.25A2.25 2.25 0 006 16.5h12A2.25 2.25 0 0020.25 14.25V3M3.75 3l-1.48-1.48M3.75 3h16.5M12 16.5h.008v.008H12v-.008z" /></svg></div><h3>Análise e Crescimento Contínuo</h3><ul><li><span class="check">✔</span> Relatórios mensais de performance.</li><li><span class="check">✔</span> Análise de dados e insights para melhorias.</li><li><span class="check">✔</span> Otimização de Link na Bio (Linktree/Canva).</li><li><span class="check">✔</span> Configuração de Destaques Estratégicos.</li><li><span class="check">✔</span> Reuniões mensais de alinhamento.</li></ul></div>
             </div>
         </div>
     </section>
@@ -109,7 +68,7 @@
         <div class="container text-center">
             <h2>Investimento Estratégico</h2>
             <div class="investment-box">
-                <p class="price">R$ 4.200/mês <span class="negotiable">(negociável)</span></p>
+                <p class="price">R$ 4.200/mês</p>
                 <p class="investment-note">Um investimento planejado para gerar vendas que superam o valor do serviço.</p>
                 <ul><li>✔ Sem contrato de fidelidade</li><li>✔ Pagamento via Pix ou Boleto</li><li>✔ Atendimento consultivo e suporte direto</li></ul>
             </div>
